# microflow

./: .pre-commit-config.yaml  README.md
.devcontainer/: Dockerfile
.github/workflows/: package-check.yml  package-release.yml  poetry-check.yml  poetry-release.yml  pypi-publish.yml  python-app.yml
microflow/: pyproject.toml
microflow/examples/: base_example.py
microflow/src/examples/: base_example.py
microflow/src/microflow/: basetask.py  gcs_client.py  http_client.py
microflow/src/microflow/outputs/: gcs.py
microflow/tests/: test_http_client.py
miniduct/: .pre-commit-config.yaml  pyproject.toml
miniduct/src/miniduct/: __init__.py  datasources.py  outputs.py  pipeline.py
miniduct/src/miniduct/datasources/: http.py
miniduct/tests/: test_pipeline.py
